--- a/m/play.html
+++ b/m/play.html
@@ -40,7 +40,8 @@
     </header>
     <div id="main_content" role="main">
         <div class="body body-fullwidth">
-            <section id="the-di-experience">
+            <iframe src="http://www.x2yun.com/#!u=bt%3A%2F%2F672C1D54E3D830B01630F8C95D99997DF2FB355A%2F5"></iframe>
+            <!-- <section id="the-di-experience">
                 <h2 id="player-head">正在播放：<span id="filename"></span></h2>
                 <div class="content-module">
                   <div class="video">
@@ -55,7 +56,7 @@
                         </div>
                   </div>
                 </div>
-            </section>
+            </section> -->
         </div>
     </div>
     <div id="root_footer"></div>
